--- a/src/assets/scss/element-var.scss
+++ b/src/assets/scss/element-var.scss
@@ -11,11 +11,23 @@
 	--el-color-white: #ffffff;
 	--el-color-black: #000000;
 
+	/* element plus - 项目主题色
+    ------------------------------- */
+	--el-color-primary: #409eff; // 主要颜色
+	--el-color-success: #67c23a; // 成功
+	--el-color-warning: #e6a23c; // 警告
+	--el-color-danger: #f56c6c; // 危险
+	--el-color-info: #909399; // 消息
+	--el-color-error: #f56c6c; // 报错
+
 	/* 边框颜色
 	------------------------------- */
-	--el-border-color: #b2b2b2; // 一级边框颜色
-	--el-border-color-light: #e2e2e2; // 二级边框颜色
-	--el-border-color-lighter: #e2e2e2; // 三级边框颜色
+	--el-border-color: #dcdfe6;
+	--el-border-color-light: #e4e7ed;
+	--el-border-color-lighter: #ebeef5;
+	--el-border-color-extra-light: #f2f6fc;
+	--el-border-color-dark: #d4d7de;
+	--el-border-color-darker: #cdd0d6;
 
 	/* 字体颜色
 	------------------------------- */
